[gd_scene load_steps=16 format=1]

[ext_resource path="res://result/result.gd" type="Script" id=1]
[ext_resource path="res://fonts/Action-Man/Action_Man.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://misc/textures/stack_cookies.png" type="Texture" id=3]
[ext_resource path="res://result/textures/RETRY_normal.png" type="Texture" id=4]
[ext_resource path="res://result/textures/RETRY_pressed.png" type="Texture" id=5]
[ext_resource path="res://particles/shave.tscn" type="PackedScene" id=6]
[ext_resource path="res://result/sounds/result.ogg" type="AudioStream" id=7]
[ext_resource path="res://cookie/sounds/shave.wav" type="Sample" id=8]

[sub_resource type="DynamicFont" id=1]

font/size = 46
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 46
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 46
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 46
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

font/size = 80
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]

font/size = 60
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="SampleLibrary" id=7]

samples/shave = {
"db": -30.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}

[node name="result" type="Node2D"]

script/script = ExtResource( 1 )

[node name="judge" type="VBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 0.0
margin/right = 960.0
margin/bottom = 320.0
alignment = 1

[node name="perfect" type="HBoxContainer" parent="judge"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 97.0
margin/right = 640.0
margin/bottom = 136.0
custom_constants/separation = 50
alignment = 1

[node name="label" type="Label" parent="judge/perfect"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 179.0
margin/top = 0.0
margin/right = 342.0
margin/bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "perfect"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="judge/perfect"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 392.0
margin/top = 0.0
margin/right = 461.0
margin/bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="success" type="HBoxContainer" parent="judge"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 140.0
margin/right = 640.0
margin/bottom = 179.0
custom_constants/separation = 45
alignment = 1

[node name="label" type="Label" parent="judge/success"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 179.0
margin/top = 0.0
margin/right = 347.0
margin/bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "success"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="judge/success"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 392.0
margin/top = 0.0
margin/right = 461.0
margin/bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bad" type="HBoxContainer" parent="judge"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 183.0
margin/right = 640.0
margin/bottom = 222.0
custom_constants/separation = 140
alignment = 1

[node name="label" type="Label" parent="judge/bad"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 179.0
margin/top = 0.0
margin/right = 252.0
margin/bottom = 39.0
custom_fonts/font = SubResource( 3 )
text = "bad"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="judge/bad"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 392.0
margin/top = 0.0
margin/right = 461.0
margin/bottom = 39.0
custom_fonts/font = SubResource( 3 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 335.0
margin/right = 1073.0
margin/bottom = 401.0
custom_constants/separation = 50
alignment = 0

[node name="label" type="Label" parent="score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 13.0
margin/right = 123.0
margin/bottom = 52.0
custom_fonts/font = SubResource( 4 )
text = "score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="score"]

rect/min_size = Vector2( 500, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 173.0
margin/top = 0.0
margin/right = 673.0
margin/bottom = 66.0
custom_fonts/font = SubResource( 5 )
text = "100000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="best_score" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 634.0
margin/right = 1073.0
margin/bottom = 700.0
custom_constants/separation = 50
alignment = 0

[node name="label" type="Label" parent="best_score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 13.0
margin/right = 98.0
margin/bottom = 52.0
custom_fonts/font = SubResource( 4 )
text = "best"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="best_score"]

rect/min_size = Vector2( 500, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 148.0
margin/top = 8.0
margin/right = 648.0
margin/bottom = 58.0
custom_fonts/font = SubResource( 6 )
text = "100000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="cookies" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 33.0
margin/top = 403.0
margin/right = 340.2
margin/bottom = 710.2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.8, 0.8 )
params/stretch_mode = 0

[node name="retry" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 896.0
margin/top = 336.0
margin/right = 1280.0
margin/bottom = 720.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="shave" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 115.632, 484.294 )
transform/scale = Vector2( 5, 5 )
config/amount = 500
config/lifetime = 3.0
config/emit_timeout = 0.5
params/linear_velocity = 80.0

[node name="shave_1" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 263.913, 482.933 )
transform/scale = Vector2( 5, 5 )
config/amount = 500
config/lifetime = 3.0
config/emit_timeout = 0.5
params/linear_velocity = 80.0

[node name="shave_2" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 110.19, 616.25 )
transform/scale = Vector2( 5, 5 )
config/amount = 500
config/lifetime = 3.0
config/emit_timeout = 0.5
params/linear_velocity = 80.0

[node name="shave_3" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 254.39, 593.124 )
transform/scale = Vector2( 5, 5 )
config/amount = 500
config/lifetime = 3.0
config/emit_timeout = 0.5
params/linear_velocity = 80.0

[node name="shave_4" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 187.732, 546.871 )
transform/scale = Vector2( 5, 5 )
config/amount = 500
config/lifetime = 3.0
config/emit_timeout = 0.5
params/linear_velocity = 80.0

[node name="bgm" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = true
stream/volume_db = -30.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="se" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 7 )
config/pitch_random = 0.0

[connection signal="button_down" from="cookies" to="." method="_on_cookies_button_down"]

[connection signal="pressed" from="retry" to="." method="_on_retry_pressed"]


